--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
+    "mysql2": "^3.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
