--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -7,16 +5,12 @@ services:
       dockerfile: Dockerfile
     container_name: nestjs-app
     ports:
-      - "3000:3000" # Porta do container mapeada para a porta da máquina host
+      - "3000:3000"
+    env_file:
+      - .env
     environment:
-      DATABASE_HOST: "35.198.31.161"
-      DATABASE_PORT: "3306"
+      DATABASE_HOST: "host.docker.internal"
       DATABASE_USER: "root"
-      DATABASE_PASSWORD: "Jv03284320114@"
-      JWT_SECRET: "segredaço"
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+      DATABASE_PASSWORD: "root"
+      DATABASE_NAME: "teksystem"
+      JWT_SECRET: "DDCEE5E259372A8FBEB6859CAD4A9"
