--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@stencil/core": "^4.22.3",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "mysql2": "^3.11.5",
